# stdlib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  print.c  print.h  test  test.S  test.c  test.h  types.h
.github/workflows/: run_tests.yml
include/: atof.h  atoi.h  atol.h  free.h  itoa.h  malloc.h  print.h  printf.h  strlen.h  types.h
src/: atof.c  atoi.c  atol.c  free.c  itoa.c  malloc.c  printf.c
tests/: main.c  test.c  test.h  test_atox.c  test_itoa.c  test_itoa.h  test_mem.c  test_print.c  test_print.h
